--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
     "electron-prebuilt": "^0.36.12",
     "emoji-images": "^0.1.1",
     "es6-shim": "^0.35.0",
